upgrade kotlin add experiment kotlin extension parcelable

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.getkeepsafe.dexcount'
 
@@ -34,6 +35,10 @@ android {
     }
 
     dataBinding.enabled true
+}
+
+androidExtensions {
+    experimental = true
 }
 
 configurations {
